# AICHO

./: .gitattributes  .gitignore  .gitmodules
button_hw/: AICHO_Button.kicad_pcb  AICHO_Button.kicad_prl  AICHO_Button.kicad_pro  AICHO_Button.kicad_sch
central_fw/: breath_detector.h  capture.c  keyboard.c  main.c  microphone.c  serial.c  sfx.c
central_hw/: AICHO_Central.kicad_pcb  AICHO_Central.kicad_prl  AICHO_Central.kicad_pro  AICHO_Central.kicad_sch  fp-lib-table  sym-lib-table
fw/: CMakeLists.txt  build.sh  debug.sh  i2s.pio  main.c  tusb_config.h  usb_host.c
fw/auxdat/: gen.c  run.sh  uqoa_conv.c
fw/src/: fft.c  i2s.pio  i2s_in.pio  i2s_out.pio  kiss_fft_amalgamate.h  leds.h  main.c  main.h  tusb_config.h  uqoa.h  usb_host.c  ws2812.pio
fw_key_relay/: CMakeLists.txt
fw_key_relay/src/: main.c  main.h  tusb_config.h  usb_host.c
fw_motor_unit/src/: main.c
hw/: AICHO.kicad_pcb  AICHO.kicad_prl  AICHO.kicad_pro  AICHO.kicad_sch  AICHO_symbols.kicad_sym  fp-lib-table  sym-lib-table
hw/AICHO_footprints.pretty/: TestPoints_1x06_P2.0.kicad_mod
hw/W25Q128JVPIQ/: W25Q128JVPIQ.dcm  W25Q128JVPIQ.kicad_sym  W25Q128JVPIQ.lib
hw/W25Q128JVPIQ/W25Q128JVPIQ.pretty/: SON127P600X500X80-9N-D.kicad_mod
hw/libs/MAX98357AETE+/: MAX98357AETE+.bak  MAX98357AETE+.dcm  MAX98357AETE+.lib  MAX98357AETE+.mod
hw/libs/PCM1808PWR/: PCM1808PWR.bak  PCM1808PWR.dcm  (+3 more)
lane_fw/: Makefile  base
lane_fw/src/: crc32.h  debug_printf.h  main.c  packets.h  py32f0xx_hal_conf.h
lane_hw/: AICHO_Lane.kicad_pcb  AICHO_Lane.kicad_prl  AICHO_Lane.kicad_pro  AICHO_Lane.kicad_sch  fp-lib-table  libs
misc/: MIC_OUT_filter.ggb  aicho.service  capture.c
misc/audio_analysis/: breath_detector.h  main.c
misc/breath_rate/: breath_rate.h
misc/fw_key_relay/: build.sh
misc/serial_relay/: serial_relay.py
remote_fw/: Makefile
remote_fw/base/: PY32F0xx_Firmware_V1.4.7  Puya.PY32F0xx_DFP.1.2.2.pack  py32f003x6.ld  py32f003x8.ld  pyocd.yaml  startup_py32f003.s
remote_fw/src/: crc32.h  leds.h  main.c  packets.h  py32f0xx_hal_conf.h
remote_hw/: AICHO_Remote.kicad_pcb  AICHO_Remote.kicad_prl  AICHO_Remote.kicad_pro  AICHO_Remote.kicad_sch  AICHO_Remote.round-tracks-config  sym-lib-table
serial_test/: crc32.h  main.c  serial.c
(+10 files in other folders)
